removing some deprecated uses